# openCvGetBuildInformation

./: CMakeLists.txt  README.md  main.cxx
